syntax = 'proto3';

package demo;

message HelloRequest {
    string haha = 1;
    string hehe = 2;
    int32 num = 3;
}

message HelloRsponse {
    string resStr = 1;
    int32 resNum = 2;
}
message Empty {

}

message streamMessage {
    string message = 1;
}

service DemoService {
    rpc TestRPC (HelloRequest) returns (HelloRsponse);
    // rpc TestStream (Empty) returns (stream testMessage);
}

service StreamService {
    rpc TestStream (Empty) returns (stream streamMessage);
}    

